--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="caixa-formulario">
             <h1>Cadastro</h1>
-            <form>
+            <form action="/cadastro" method="post">
                 <input type="text" placeholder="Nome completo" required>
                 <input type="text" placeholder="Matrícula" required>
                 <input type="text" placeholder="Turma" required>
