--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -11,10 +11,10 @@
         <div class="caixa-formulario">
             <h1>Cadastro</h1>
             <form action="/cadastro" method="post">
-                <input type="text" placeholder="Nome completo" required>
-                <input type="text" placeholder="Matrícula" required>
-                <input type="text" placeholder="Turma" required>
-                <input type="password" placeholder="Senha" required>
+                <input type="text" name="nome" placeholder="Nome completo" required>
+                <input type="text" name="matricula" placeholder="Matrícula" required>
+                <input type="text" name="turma" placeholder="Turma" required>
+                <input type="password" name="senha" placeholder="Senha" required>
                 <div class="termos-condicoes">
                     <input type="checkbox" id="termos" required>
                     <label for="termos">Eu concordo com os termos e condições</label>
